--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -6,6 +6,7 @@
         <a [title]="product.name + ' details'">{{ product.name }}</a>
         <p *ngIf="product.description">Description: {{ product.description }}</p>
         <div><button (click)="share()">Share</button></div>
+        <app-product-alerts [a]="product"></app-product-alerts>
     </h3>
 </div>
 
