--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -3,7 +3,7 @@
 
 <div *ngFor="let product of products">
     <h3>
-        <a [title]="product.name + ' details'">{{ product.name }}</a>
+        <a [title]="product.name + ' details'" [routerLink]="['/products', product.id]">{{ product.name }}</a>
         <p *ngIf="product.description">Description: {{ product.description }}</p>
         <div><button (click)="share()">Share</button></div>
         <app-product-alerts [a]="product" (notify)="onNotify()"></app-product-alerts>
