Acessando dados com async API e mostrando-os no componente shipping

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -5,3 +5,9 @@
     <span> {{ item.name }}</span>
     <span> {{ item.price | currency }} </span>
 </div>
+
+<div>
+    <button [routerLink]="['/shipping']">
+        Shipping Prices
+    </button>
+</div>
